--- a/Clustering_Jerarquico/Clustering_Jerarquico_clase.ipynb
+++ b/Clustering_Jerarquico/Clustering_Jerarquico_clase.ipynb
@@ -14,12 +14,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "098e78c2",
+   "id": "0ac2ba50",
    "metadata": {
     "id": "bb7c7c13"
    },
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ignaciomsarmiento/MALM/blob/main/Clustering_Jerarquico/Clustering_Jerarquico_clase.ipynb)\n"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ignaciomsarmiento/IAMD/blob/main/Clustering_Jerarquico/Clustering_Jerarquico_clase.ipynb)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
