--- a/Rec_Usuarios/Rec_Systems.ipynb
+++ b/Rec_Usuarios/Rec_Systems.ipynb
@@ -17,7 +17,7 @@
     "id": "mTsldyYr2pmJ"
    },
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ignaciomsarmiento/MALM/blob/main/06_Rec_Usuarios/L06_Colab.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ignaciomsarmiento/IAMD/blob/main/Rec_Usuarios/Rec_Systems.ipynb)\n"
    ]
   },
   {
