update link github

--- a/Evaluacion/Eval_RecSystems.ipynb
+++ b/Evaluacion/Eval_RecSystems.ipynb
@@ -557,8 +557,8 @@
         "import pandas as pd\n",
         "\n",
         "\n",
-        "# Load data\n",
-        "dat = pd.read_csv(\"sim_marketing_ab_log.csv\")\n",
+        "# cargamos los datos\n",
+        "dat = pd.read_csv(\"https://raw.githubusercontent.com/ignaciomsarmiento/datasets/refs/heads/main/sim_marketing_ab_log.csv\")\n",
         "\n",
         "dat.head()"
       ]
@@ -571,21 +571,8 @@
       "outputs": [],
       "source": [
         "\n",
-        "# Make sure these are treated as categorical variables\n",
         "dat[\"variant\"] = dat[\"variant\"].astype(\"category\")   # \"A\" / \"B\"\n",
         "dat[\"segment\"] = dat[\"segment\"].astype(\"category\")   # 3 segments\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "bdc24abd",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Mean intent by offer (A vs B)\n",
-        "mean_by_variant = dat.groupby(\"variant\")[\"intent_0_10\"].mean()\n",
-        "print(mean_by_variant)\n"
       ]
     },
     {
